fix _scrollbar.scss: turned scrollbar thinner

--- a/css/_scrollbar.scss
+++ b/css/_scrollbar.scss
@@ -2,7 +2,8 @@
 
 /* Scrollbar */
 ::-webkit-scrollbar {
-    width: 8px;
+    width: 6px;
+    height: 6px;
 }
  
 /* Track */
